--- a/partials/PCH1.html
+++ b/partials/PCH1.html
@@ -1,8 +1,14 @@
-<h1>Pacific Coast Highway</h1>
-<h2>Road Trip Stops</h2>
+
+
+<h3>{{highwayName}}</h3>
+<h4>{{highwayDescription}}</h4>
+Road Trip Stops
 <ul>
 	<li>Tree Bones Resort</li>
 	<li>Big Sur</li>
 	<li>Eselan</li>
 </ul>
+
+
+<a href="http://localhost:8080/#!/">Homepage</a>
 
