--- a/partials/riverGorgeHWY.html
+++ b/partials/riverGorgeHWY.html
@@ -1,7 +1,11 @@
-<h1>The Historic Columbia River Highway Scenic Byway</h1>
+<!-- <h1>The Historic Columbia River Highway Scenic Byway</h1>
 <h2>What to See</h2>
-<<ul>
+<ul>
 	<li>One Thing</li>
 	<li>Two Thing</li>
 	<li>Three Thing</li>
 </ul>
+ -->
+
+<h3>{{highwayName}}</h3>
+<h4>{{highwayDescription}}</h4>
